[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zava-logistics"
version = "1.2.5"
description = "Azure AI-powered last-mile delivery platform with 8 intelligent agents"
readme = "readme.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Darren Turchiarelli", email = "darrent@microsoft.com"}
]
keywords = [
    "logistics",
    "delivery",
    "azure-ai",
    "azure-cosmos-db",
    "last-mile",
    "parcel-tracking",
    "ai-agents"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Flask",
    "Operating System :: OS Independent",
]

dependencies = [
    # Web Framework
    "Flask>=3.0.0",
    "gunicorn>=21.2.0",
    "Werkzeug>=3.0.0",
    
    # Azure AI and Cognitive Services
    "azure-ai-projects>=1.0.0",
    "azure-identity>=1.12.0",
    "azure-core>=1.26.0",
    "openai>=1.30.0",  # Azure OpenAI Assistants API
    "azure-ai-vision-imageanalysis>=1.0.0",
    "azure-cognitiveservices-speech>=1.35.0",
    
    # Azure Cosmos DB
    "azure-cosmos>=4.5.0",
    
    # Microsoft Agent Framework v1.8.1 (GA)
    # agent-framework-azure-ai removed — superseded by agent-framework-foundry
    "agent-framework-core>=1.8.1",
    "agent-framework-openai>=1.8.1",       # OpenAIChatClient (renamed from OpenAIChatCompletionClient)
    "agent-framework-foundry>=1.8.1",     # FoundryChatClient, FoundryMemoryProvider
    "agent-framework-orchestrations",
    "azure-ai-agentserver-agentframework==1.0.0b17",
    "azure-ai-agentserver-core==1.0.0b16",  # held at b16 — 2.x is a major-version break
    "debugpy>=1.8.0",
    "agent-dev-cli",
    
    # Configuration and Validation
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Utilities
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "aiohttp>=3.9.0",
    "faker>=20.0.0",
    
    # Image Processing and OCR
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "extract-msg>=0.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/darrengit/zava-logistics"
Documentation = "https://github.com/darrengit/zava-logistics/blob/main/readme.md"
Repository = "https://github.com/darrengit/zava-logistics"
Issues = "https://github.com/darrengit/zava-logistics/issues"

[project.scripts]
zava = "src.interfaces.cli.main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = false

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 120
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = """
    -ra
    --strict-markers
    --strict-config
    --showlocals
    --tb=short
"""
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
